# warehouse-management-system

./: .gitignore  CMakeLists.txt  README.md
certs/: private.pem  public.pem
client/: client.cpp
data/: Warehouse.db  logs.txt  products.txt  users.txt  warehouse.db
include/: Crypto.h  Database.h  EpollServer.h  InventoryItem.h  InventoryManager.h  Logger.h  MessageFramer.h  Product.h  RSAManager.h  RSAUtil.h  SecureChannel.h  Session.h  ThreadPool.h  TokenManager.h  User.h  UserManager.h  Utils.h  Warehouse.h
keys/: server_private.pem  server_public.pem
proto/: warehouse.proto
server/: server.cpp
src/: Crypto.cpp  Database.cpp  EpollServer.cpp  InventoryManager.cpp  Logger.cpp  MessageFramer.cpp  Product.cpp  RSAManager.cpp  RSAUtil.cpp  SecureChannel.cpp  ThreadPool.cpp  TokenManager.cpp  User.cpp  UserManager.cpp  Utils.cpp  Warehouse.cpp  client.cpp  crypto_test.cpp  main.cpp  rsa_test.cpp  server.cpp
tests/: crypto_test.cpp  inventory_crud_test.cpp  inventory_test.cpp  protobuf_test.cpp  rsa_enc_dec_test.cpp  rsa_test.cpp
